--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -10,8 +10,13 @@ hr {
 .navbar__container {
   display: flex;
   gap: 2rem;
-  justify-content: space-between;
   align-items: center;
+  justify-content: center;
+}
+@media screen and (min-width: 960px) {
+  .navbar__container {
+    justify-content: space-between;
+  }
 }
 .navbar__container .img__navbar--header {
   position: absolute;
@@ -20,9 +25,17 @@ hr {
   -o-object-position: center 20rem;
      object-position: center 20rem;
   height: 50rem;
-  max-width: 40rem;
   border-radius: 0 0 22rem 22rem;
   z-index: 1;
+  max-width: 40rem;
+}
+@media screen and (min-width: 960px) {
+  .navbar__container .img__navbar--header {
+    -o-object-position: center 20rem;
+       object-position: center 20rem;
+    right: 0;
+    max-width: 38rem;
+  }
 }
 .navbar__container .navbar__links--container {
   width: 100%;
